src/test/resources/LO-2/InvalidPrograms/test_6.lo
// *Bad testcase*
// Too many arguments

int main()
{
    int a;
    {
     a=5;
     return foo(a,a);
    }
}

int foo(int a) {
    {
        return a;
    }
}